made light and dark toggle work

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
           </div>
           <div class="bar">|</div>
           <div class="white-light-icons">
-            <span class="white-black-mode"
-              ><i class="fas fa-toggle-on"></i>
-            </span>
+            <span class="toggle"> </span>
             <span><i class="fas fa-moon"></i> </span>
           </div>
         </div>
