made dictionary web app responsive

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
         </div>
         <div class="side-icons">
           <div class="font">
-            serif
-            <span class="drop-down"><i class="fas fa-angle-down"></i> </span>
+            <select id="font-selector">
+              <option value="serif">Serif</option>
+              <option value="sans-serif">Sans-serif</option>
+              <option value="monospace">Monospace</option>
+            </select>
           </div>
+
           <div class="bar">|</div>
           <div class="white-light-icons">
             <span class="toggle"> </span>
